tests/sem/error/arguments_mismatch.c
void cyka(int a, int* b, char c){}

void main(){
    int a;
    int* b;
    char(c);
    cyka(a,a,b,c);
}

